Test/errors/err_missing_return.cb
expect_error("missing a return statement") {
    int compute(int x)
    {
        int y = x * 2;
    }
}

extern int main()
{
    return 0;
}
